# Lycoris

./: .gitignore  CMakeLists.txt  LICENSE  README.md  core  main.cpp  main.go  main_go  model
Examples/Cocoon/: CMakeLists.txt  main.cpp
Examples/HelloWorld/: CMakeLists.txt  main.cpp
LycorisNet/: Genome.go  Individual.go  Layers.go  Lycoris.go  MathLib.go  Node.go  RandPool.go  Sort.go  Species.go  Utils.go
LycorisNet/Utils/: Utils.go
LycorisNet/include/: args.h  factory.h  genome.h  individual.h  lycoris.h  node.h  species.h  utils.h
LycorisNet/sources/: args.cpp  factory.cpp  genome.cpp  individual.cpp  lycoris.cpp  node.cpp  species.cpp  utils.cpp
python/: CMakeLists.txt  LycorisNet.cpp  README.md
